# mrfifo

./: .coveragerc  README.md  ROADMAP.md  environment.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
mrfifo/: __init__.py  contrib.py  decorator.py  fast_loops.pyx  parallel.py  parts.py  plumbing.py  util.py
test_data/: tiny_test.bam
tests/: test_cy.py
