[build-system]
requires = ["setuptools", "wheel", "Cython"]

[project]
name = 'mrfifo'
dependencies = [
  'setproctitle',
  'isal',
  'pandas'
]
dynamic = ["version", "classifiers", "authors", "urls", "readme", "requires-python", "license", "description"]

[tool.setuptools.dynamic]
version = {attr = "mrfifo.contrib.__version__"}

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-cov',
  'coverage'
]
