[metadata]
name = mrfifo
version = attr: mrfifo.contrib.__version__
author = Marvin Jens
author_email = marvin.jens@charite.de
description = Map-Reduce parallelism over FIFOs (named pipes)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marvin-jens/mrfifo
project_urls =
    Bug Tracker = https://github.com/marvin-jens/mrfifo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
license = MIT

[options]
zip_safe = False
python_requires = >=3.10
include_package_data = True
package_dir =
    mrfifo = mrfifo
packages = mrfifo

[options.package_data]
spacemake = 
    test_data/*.fastq.gz
    test_data/*.bam

# [options.entry_points]
# console_scripts = 
#     alnstats = spacemake.alnstats:cmdline
#     preprocess = spacemake.preprocess:cmdline
#     spacemake = spacemake.cmdline:cmdline
#     pb_annotate = spacemake.longread.cmdline:cmdline

[tool:pytest]
testpaths = tests

[pydocstyle]
inherit = false
match-dir = (?!tests)[^\.].*